--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Payme</title>
    <link rel="stylesheet" href="./main.css">
+   <link rel="stylesheet" href="./card.css">
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 
@@ -56,6 +57,7 @@
                   <span class="user-password"></span>
                </div>
                <div class="item">
+                  <button class="show-cards">My cards</button>
                   <span>User card</span>
                   <span class="user-card"></span>
                </div>
